--- a/package.json
+++ b/package.json
@@ -3,5 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Cory Reed",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.5"
+  },
+  "scripts": {
+    "format": "prettier --write '*.js'"
+  }
 }
