feat: add basic server middleware

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "dependencies": {
     "fastify": "^2.14.0",
+    "fastify-cors": "^3.0.3",
+    "fastify-healthcheck": "^2.1.0",
+    "fastify-helmet": "^3.0.2",
+    "fastify-static": "^2.7.0",
     "hard-rejection": "^2.1.0"
   },
   "devDependencies": {
@@ -20,7 +24,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "format": "prettier --write '*.js' 'src/**/*.ts'",
+    "format": "prettier --write '*.js' '{src,types}/**/*.ts'",
     "start": "node dist/index.js"
   }
 }
